--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "env": {
       "browser": true,
       "node": true
+    },
+    "globals": {
+      "define": true
     }
   },
   "repository": {
