--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pictor",
   "version": "1.0.0",
   "description": "pictor site refactoring",
-  "main": "index.js",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.x",
     "autoprefixer": "^7.1.2",
@@ -11,7 +10,6 @@
     "del": "^3.0.0",
     "eslint": "^4.4.1",
     "eslint-config-htmlacademy": "^0.3.0",
-    "eslint-plugin-html": "^3.1.1",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
@@ -24,10 +22,11 @@
     "run-sequence": "^2.1.0"
   },
   "scripts": {
-    "test": "editorconfig-cli",
+    "test-html": "editorconfig-cli",
+    "test-js": " eslint js/*",
     "build": "gulp build",
     "start": "gulp serve",
-    "deploy": "gulp deploy"
+    "style": "gulp style-project"
   },
   "editorconfig-cli": [
     "*.html",
