--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.x",
     "autoprefixer": "^7.1.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.2",
     "css-mqpacker": "^6.0.1",
     "del": "^3.0.0",
-    "eslint": "^4.4.1",
-    "eslint-config-htmlacademy": "^0.3.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
@@ -22,8 +25,7 @@
     "run-sequence": "^2.1.0"
   },
   "scripts": {
-    "test-html": "editorconfig-cli",
-    "test-js": " eslint js/*",
+    "test": "eslint js/*",
     "build": "gulp build",
     "start": "gulp serve",
     "style": "gulp style-project"
@@ -36,22 +38,6 @@
     "img/**/*.svg",
     "sass/**/*.{sass,scss}"
   ],
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "htmlacademy/es5"
-    ],
-    "plugins": [
-      "html"
-    ],
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "globals": {
-      "define": true
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cognitive-cake/pictor.git"
