--- a/package.json
+++ b/package.json
@@ -15,20 +15,25 @@
     "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.0",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
+    "pug-lint": "^2.5.0",
+    "pug-lint-config-clock": "^2.0.0",
     "run-sequence": "^2.1.0"
   },
   "scripts": {
     "test": "eslint js/*",
     "build": "gulp build",
     "start": "gulp serve",
-    "style": "gulp style-project"
+    "style": "gulp style-project",
+    "pug": "gulp pug"
   },
   "editorconfig-cli": [
     "*.html",
