--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "test": "eslint js/*",
     "build": "gulp build",
-    "start": "gulp serve",
+    "serve": "gulp serve",
     "style": "gulp style-project",
     "pug": "gulp pug"
   },
